컨텐츠 한개 api

--- a/apigateway/src/main/resources/application.yml
+++ b/apigateway/src/main/resources/application.yml
@@ -42,7 +42,7 @@ spring:
               - "token"
             exposed-headers:
               - "token"
-              - "userId"
+              - "loginId"
         add-to-simple-url-handler-mapping: true
 #      default-filters:
 #        - name: CorsGlobalConfiguration
