수강평가 서비스

--- a/apigateway/src/main/resources/application.yml
+++ b/apigateway/src/main/resources/application.yml
@@ -87,7 +87,7 @@ spring:
       #      - AuthorizationHeaderFilter
 
         - id: content-service
-          uri: http://localhost:52001
+          uri: lb://CONTENT-SERVICE
           predicates:
             - Path=/content-service/**
             - Method=POST,GET
