--- a/review-service/build.gradle
+++ b/review-service/build.gradle
@@ -20,14 +20,17 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.0'
+
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation group: 'jakarta.validation', name: 'jakarta.validation-api', version: '2.0.2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+	implementation 'org.modelmapper:modelmapper:2.4.2'
+
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:2.7.4'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	annotationProcessor 'org.projectlombok:lombok'
 }
 
 dependencyManagement {
