--- a/apigateway/build.gradle
+++ b/apigateway/build.gradle
@@ -26,6 +26,7 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+	implementation("io.netty:netty-resolver-dns-native-macos:4.1.79.Final:osx-aarch_64")
 
 	//자바 버젼 때문에 따로 추가~!
 	implementation group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '2.3.1'
