--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -9,7 +9,9 @@ spring:
     url: jdbc:mariadb://localhost:3306/learning?characterEncoding=UTF-8&serverTimezone=UTC
     username: root
     password: 1234
-
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
   jpa:
     hibernate:
       ddl-auto: update
